[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/ResultsScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/GameContainer.gd" type="Script" id=3]
[ext_resource path="res://fonts/resources/numans40.tres" type="DynamicFont" id=4]
[ext_resource path="res://img/gui/undo.png" type="Texture" id=5]
[ext_resource path="res://img/gui/trash.png" type="Texture" id=6]
[ext_resource path="res://fonts/resources/numans34.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="ResultsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.584314, 0, 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 1 )
text = "Resultados"
align = 1
valign = 1

[node name="SavedGames" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -790.0
margin_right = 29.0
margin_bottom = 660.0
rect_pivot_offset = Vector2( 566, 725 )
color = Color( 0.607843, 0.607843, 0.607843, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="SavedGames"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 566, 960 )
scroll_horizontal_enabled = false
script = ExtResource( 3 )

[node name="SavedGamesList" type="VBoxContainer" parent="SavedGames/ScrollContainer"]
margin_right = 566.0
rect_min_size = Vector2( 566, 0 )
custom_constants/separation = 0

[node name="TeamScores" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -790.0
margin_right = 540.0
margin_bottom = 660.0
rect_pivot_offset = Vector2( 0, 725 )

[node name="Scores" type="VBoxContainer" parent="TeamScores"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_right = 15.0
margin_bottom = -162.0
rect_min_size = Vector2( 540, 0 )

[node name="Lower" type="Control" parent="TeamScores"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -162.0
margin_bottom = -2.0

[node name="Turno" type="Label" parent="TeamScores/Lower"]
anchor_right = 1.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Turno de Equipo 1"
align = 1
valign = 1
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="TeamScores/Lower"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -262.5
margin_top = -64.0
margin_right = 262.5
custom_constants/separation = 60
alignment = 1

[node name="Undo" type="TextureButton" parent="TeamScores/Lower/HBoxContainer"]
margin_left = 168.0
margin_right = 232.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )

[node name="Remove" type="TextureButton" parent="TeamScores/Lower/HBoxContainer"]
margin_left = 292.0
margin_right = 356.0
margin_bottom = 64.0
texture_normal = ExtResource( 6 )

[node name="Lower" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -297.0

[node name="Button" type="Button" parent="Lower"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -234.0
margin_top = -38.5
margin_right = 233.0
margin_bottom = 38.5
custom_fonts/font = ExtResource( 7 )
text = "Volver"
[connection signal="pressed" from="TeamScores/Lower/HBoxContainer/Undo" to="." method="_on_Undo_pressed"]
[connection signal="pressed" from="TeamScores/Lower/HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="Lower/Button" to="." method="_on_Button_pressed"]
